--- a/apps/service/demo/styles-demo.html
+++ b/apps/service/demo/styles-demo.html
@@ -12,6 +12,8 @@
         --muted: #9aa4b2;
         --text: #e5e7eb;
         --border: #24314b;
+        --accent: #60a5fa;
+        --danger: #fb7185;
       }
       body {
         margin: 0;
@@ -22,7 +24,9 @@
           Segoe UI,
           Roboto,
           Helvetica,
-          Arial;
+          Arial,
+          "Apple Color Emoji",
+          "Segoe UI Emoji";
         background: radial-gradient(900px 600px at 30% 10%, #18264a, var(--bg));
         color: var(--text);
       }
@@ -33,11 +37,11 @@
         display: grid;
         gap: 16px;
       }
-      .card {
-        background: color-mix(in oklab, var(--panel) 92%, black 8%);
-        border: 1px solid var(--border);
-        border-radius: 14px;
-        padding: 16px;
+      header {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        gap: 12px;
       }
       h1 {
         margin: 0;
@@ -47,7 +51,21 @@
         color: var(--muted);
         font-size: 12px;
         line-height: 1.4;
-        margin-top: 6px;
+      }
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        gap: 16px;
+      }
+      .card {
+        background: color-mix(in oklab, var(--panel) 92%, black 8%);
+        border: 1px solid var(--border);
+        border-radius: 14px;
+        padding: 16px;
+      }
+      .card h2 {
+        margin: 0 0 10px 0;
+        font-size: 14px;
       }
       label {
         display: grid;
@@ -55,14 +73,56 @@
         font-size: 12px;
         color: var(--muted);
       }
-      input {
+      input,
+      select,
+      button {
         font: inherit;
+      }
+      input,
+      select {
         background: #0d1526;
         border: 1px solid var(--border);
         border-radius: 10px;
         padding: 10px 12px;
         color: var(--text);
         outline: none;
+      }
+      input:focus,
+      select:focus {
+        border-color: color-mix(in oklab, var(--accent) 60%, var(--border));
+        box-shadow: 0 0 0 3px
+          color-mix(in oklab, var(--accent) 25%, transparent);
+      }
+      .row {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        margin-top: 10px;
+      }
+      .actions {
+        display: flex;
+        gap: 10px;
+        margin-top: 12px;
+      }
+      button {
+        border: 1px solid var(--border);
+        background: #101b32;
+        color: var(--text);
+        border-radius: 10px;
+        padding: 10px 12px;
+        cursor: pointer;
+      }
+      button.primary {
+        border-color: color-mix(in oklab, var(--accent) 55%, var(--border));
+        background: color-mix(in oklab, var(--accent) 16%, #0d1526);
+      }
+      button.danger {
+        border-color: color-mix(in oklab, var(--danger) 55%, var(--border));
+        background: color-mix(in oklab, var(--danger) 14%, #0d1526);
+      }
+      button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
       }
       pre {
         margin: 0;
@@ -75,19 +135,31 @@
         font-size: 12px;
         line-height: 1.45;
       }
+      .status {
+        font-size: 12px;
+        color: var(--muted);
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="card">
-        <h1>Styles Service Demo</h1>
-        <div class="hint">
-          The <code>styles</code> module controller is currently empty in this
-          repo. Implement endpoints first, then update this demo to call them.
+      <header>
+        <div>
+          <h1>Styles Service Demo</h1>
+          <div class="hint">
+            Endpoints:
+            <code>GET /styles/list</code>,
+            <code>POST /styles/create</code>,
+            <code>PATCH /styles/update</code>,
+            <code>GET /styles/:styleId</code>.
+            Default service URL is <code>http://localhost:5000</code>.
+          </div>
         </div>
-      </div>
+        <div class="status" id="status"></div>
+      </header>
 
       <div class="card">
+        <h2>Server</h2>
         <label>
           Base URL
           <input
@@ -99,8 +171,388 @@
         </label>
       </div>
 
-      <pre id="out">{ "note": "No styles endpoints wired yet." }</pre>
+      <div class="grid">
+        <div class="card">
+          <h2>Create Style</h2>
+
+          <label>
+            Title (min 4)
+            <input id="createTitle" placeholder="e.g. impressionism" />
+          </label>
+
+          <label style="margin-top: 10px">
+            Description (optional)
+            <input id="createDescription" placeholder="Short description..." />
+          </label>
+
+          <div class="row">
+            <label>
+              Status
+              <select id="createStatus">
+                <option value="">(optional)</option>
+                <option value="active">active</option>
+                <option value="deactive">deactive</option>
+              </select>
+            </label>
+            <label>
+              Slug (optional)
+              <input id="createSlug" placeholder="e.g. impressionism" />
+            </label>
+          </div>
+
+          <div class="actions">
+            <button class="primary" id="createBtn">POST /styles/create</button>
+            <button class="danger" id="clearOutBtn">Clear output</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>List Styles</h2>
+
+          <div class="row">
+            <label>
+              Page
+              <input id="listPage" placeholder="1" inputmode="numeric" />
+            </label>
+            <label>
+              Limit
+              <input id="listLimit" placeholder="10" inputmode="numeric" />
+            </label>
+          </div>
+
+          <label style="margin-top: 10px">
+            Search in title (optional)
+            <input id="listSearch" placeholder="e.g. imp" />
+          </label>
+
+          <label style="margin-top: 10px">
+            Slug (optional; supports comma-separated)
+            <input id="listSlug" placeholder="e.g. impressionism or a,b,c" />
+          </label>
+
+          <label style="margin-top: 10px">
+            Status (optional)
+            <select id="listStatus">
+              <option value="">(any)</option>
+              <option value="active">active</option>
+              <option value="deactive">deactive</option>
+            </select>
+          </label>
+
+          <div class="actions">
+            <button class="primary" id="listBtn">GET /styles/list</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="card">
+          <h2>Update Style</h2>
+
+          <label>
+            Style ID
+            <input id="updateStyleId" placeholder="Mongo ObjectId" />
+          </label>
+
+          <label style="margin-top: 10px">
+            Title (optional)
+            <input id="updateTitle" placeholder="e.g. modernism" />
+          </label>
+
+          <label style="margin-top: 10px">
+            Slug (optional)
+            <input id="updateSlug" placeholder="e.g. modernism" />
+          </label>
+
+          <div class="row">
+            <label>
+              Status (optional)
+              <select id="updateStatus">
+                <option value="">(optional)</option>
+                <option value="active">active</option>
+                <option value="deactive">deactive</option>
+              </select>
+            </label>
+            <label>
+              Description (optional)
+              <input
+                id="updateDescription"
+                placeholder="Short description..."
+              />
+            </label>
+          </div>
+
+          <div class="actions">
+            <button class="primary" id="updateBtn">
+              PATCH /styles/update
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Get Style By ID</h2>
+
+          <label>
+            Style ID
+            <input id="getStyleId" placeholder="Mongo ObjectId" />
+          </label>
+
+          <div class="actions">
+            <button class="primary" id="getBtn">GET /styles/:id</button>
+          </div>
+        </div>
+      </div>
+
+      <pre id="out">{}</pre>
     </div>
+
+    <script>
+      const $ = (id) => document.getElementById(id);
+
+      const statusEl = $("status");
+      const outEl = $("out");
+
+      const baseUrlEl = $("baseUrl");
+      const createTitleEl = $("createTitle");
+      const createDescriptionEl = $("createDescription");
+      const createStatusEl = $("createStatus");
+      const createSlugEl = $("createSlug");
+      const createBtn = $("createBtn");
+      const clearOutBtn = $("clearOutBtn");
+
+      const listPageEl = $("listPage");
+      const listLimitEl = $("listLimit");
+      const listSearchEl = $("listSearch");
+      const listSlugEl = $("listSlug");
+      const listStatusEl = $("listStatus");
+      const listBtn = $("listBtn");
+
+      const updateStyleIdEl = $("updateStyleId");
+      const updateTitleEl = $("updateTitle");
+      const updateSlugEl = $("updateSlug");
+      const updateStatusEl = $("updateStatus");
+      const updateDescriptionEl = $("updateDescription");
+      const updateBtn = $("updateBtn");
+
+      const getStyleIdEl = $("getStyleId");
+      const getBtn = $("getBtn");
+
+      function setStatus(text) {
+        statusEl.textContent = text ?? "";
+      }
+
+      function setOut(value) {
+        outEl.textContent =
+          typeof value === "string" ? value : JSON.stringify(value, null, 2);
+      }
+
+      function getBaseUrl() {
+        const v = (baseUrlEl.value || "").trim();
+        return v || "http://localhost:5000";
+      }
+
+      function setLoading(isLoading) {
+        createBtn.disabled = isLoading;
+        listBtn.disabled = isLoading;
+        updateBtn.disabled = isLoading;
+        getBtn.disabled = isLoading;
+        setStatus(isLoading ? "Loading..." : "");
+      }
+
+      async function safeJson(res) {
+        const text = await res.text();
+        try {
+          return JSON.parse(text);
+        } catch {
+          return text;
+        }
+      }
+
+      async function request(path, options) {
+        const url = new URL(path, getBaseUrl());
+        const res = await fetch(url.toString(), {
+          ...options,
+          headers: {
+            "content-type": "application/json",
+            ...(options && options.headers ? options.headers : {}),
+          },
+        });
+
+        const body = await safeJson(res);
+        if (!res.ok) {
+          const message =
+            typeof body === "object" && body && body.message
+              ? body.message
+              : `HTTP ${res.status}`;
+          const err = new Error(message);
+          err.body = body;
+          err.status = res.status;
+          throw err;
+        }
+
+        return body;
+      }
+
+      function saveDefaults() {
+        localStorage.setItem("styles-demo.baseUrl", baseUrlEl.value.trim());
+        localStorage.setItem("styles-demo.listPage", listPageEl.value.trim());
+        localStorage.setItem("styles-demo.listLimit", listLimitEl.value.trim());
+        localStorage.setItem(
+          "styles-demo.listSearch",
+          listSearchEl.value.trim()
+        );
+        localStorage.setItem("styles-demo.listSlug", listSlugEl.value.trim());
+        localStorage.setItem("styles-demo.listStatus", listStatusEl.value.trim());
+      }
+
+      function loadDefaults() {
+        baseUrlEl.value =
+          localStorage.getItem("styles-demo.baseUrl") ||
+          "http://localhost:5000";
+        listPageEl.value = localStorage.getItem("styles-demo.listPage") || "1";
+        listLimitEl.value =
+          localStorage.getItem("styles-demo.listLimit") || "10";
+        listSearchEl.value =
+          localStorage.getItem("styles-demo.listSearch") || "";
+        listSlugEl.value = localStorage.getItem("styles-demo.listSlug") || "";
+        listStatusEl.value =
+          localStorage.getItem("styles-demo.listStatus") || "";
+      }
+
+      loadDefaults();
+      setOut({ ok: true, hint: "Run the service and try Create/List/Update/Get." });
+
+      baseUrlEl.addEventListener("change", saveDefaults);
+      listPageEl.addEventListener("change", saveDefaults);
+      listLimitEl.addEventListener("change", saveDefaults);
+      listSearchEl.addEventListener("change", saveDefaults);
+      listSlugEl.addEventListener("change", saveDefaults);
+      listStatusEl.addEventListener("change", saveDefaults);
+
+      clearOutBtn.addEventListener("click", () => setOut({}));
+
+      createBtn.addEventListener("click", async () => {
+        saveDefaults();
+        setLoading(true);
+        try {
+          const title = createTitleEl.value.trim();
+          const description = createDescriptionEl.value.trim();
+          const status = createStatusEl.value.trim();
+          const slug = createSlugEl.value.trim();
+
+          const payload = {
+            title,
+            ...(description ? { description } : {}),
+            ...(status ? { status } : {}),
+            ...(slug ? { slug } : {}),
+          };
+
+          const data = await request("/styles/create", {
+            method: "POST",
+            body: JSON.stringify(payload),
+          });
+          setOut({ action: "create", payload, response: data });
+        } catch (e) {
+          setOut({
+            action: "create",
+            error: String(e && e.message ? e.message : e),
+            details: e && e.body ? e.body : undefined,
+          });
+        } finally {
+          setLoading(false);
+        }
+      });
+
+      listBtn.addEventListener("click", async () => {
+        saveDefaults();
+        setLoading(true);
+        try {
+          const params = new URLSearchParams();
+          const page = listPageEl.value.trim();
+          const limit = listLimitEl.value.trim();
+          const search = listSearchEl.value.trim();
+          const slug = listSlugEl.value.trim();
+          const status = listStatusEl.value.trim();
+          if (page) params.set("page", page);
+          if (limit) params.set("limit", limit);
+          if (search) params.set("search", search);
+          if (slug) params.set("slug", slug);
+          if (status) params.set("status", status);
+
+          const data = await request(`/styles/list?${params.toString()}`, {
+            method: "GET",
+          });
+          setOut({
+            action: "list",
+            query: Object.fromEntries(params),
+            response: data,
+          });
+        } catch (e) {
+          setOut({
+            action: "list",
+            error: String(e && e.message ? e.message : e),
+            details: e && e.body ? e.body : undefined,
+          });
+        } finally {
+          setLoading(false);
+        }
+      });
+
+      updateBtn.addEventListener("click", async () => {
+        saveDefaults();
+        setLoading(true);
+        try {
+          const styleID = updateStyleIdEl.value.trim();
+          const title = updateTitleEl.value.trim();
+          const slug = updateSlugEl.value.trim();
+          const status = updateStatusEl.value.trim();
+          const description = updateDescriptionEl.value.trim();
+
+          const payload = {
+            styleID,
+            ...(title ? { title } : {}),
+            ...(slug ? { slug } : {}),
+            ...(status ? { status } : {}),
+            ...(description ? { description } : {}),
+          };
+
+          const data = await request("/styles/update", {
+            method: "PATCH",
+            body: JSON.stringify(payload),
+          });
+
+          setOut({ action: "update", payload, response: data });
+        } catch (e) {
+          setOut({
+            action: "update",
+            error: String(e && e.message ? e.message : e),
+            details: e && e.body ? e.body : undefined,
+          });
+        } finally {
+          setLoading(false);
+        }
+      });
+
+      getBtn.addEventListener("click", async () => {
+        saveDefaults();
+        setLoading(true);
+        try {
+          const styleId = getStyleIdEl.value.trim();
+          const data = await request(`/styles/${styleId}`, {
+            method: "GET",
+          });
+          setOut({ action: "get", styleId, response: data });
+        } catch (e) {
+          setOut({
+            action: "get",
+            error: String(e && e.message ? e.message : e),
+            details: e && e.body ? e.body : undefined,
+          });
+        } finally {
+          setLoading(false);
+        }
+      });
+    </script>
   </body>
 </html>
 
